assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:100,200,300,400,500,600,700,800,|Raleway:100,200,300,400,500,600,700,800');

/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v7.0.29,
* Autoprefixer: v9.7.6
* Browsers: last 4 version
*/

/****General****/

* {
    margin: 0;
    padding:0;
    border: 0;
}

.row, .container, .container-fluid {
    padding: 0;
    margin: 0;
}

:root{
    --light:#e8f2e6;
}

body {
    font-family: "Raleway", sans-serif;
    text-align: justify;
}

.space{
    padding: 40px 0;
    margin-top: 5px;
}

hr {
    margin-top: 1rem;
    margin-bottom: 2rem;
    border: 0;
}

h2 {
    font-weight: 800;
    font-size: 1.75rem;
}

h3 {
    font-weight: 700;
    font-size: 1.5rem;
}

h4 {
    margin-bottom: .5rem;
    font-weight: 700;
    line-height: 1.2;
}

.col-md-6 {
    padding: 5px;
}

/******Navbar*******/

.navbar {
    background-color:#e8f2e6;
    font-family: "Montserrat",sans-serif;
    font-size: 1.1rem;
    font-weight: 800;
    -webkit-box-shadow: 0 .5rem .5rem rgba(0, 0, 0, .2);
    box-shadow: 0 .5rem .5rem rgba(0, 0, 0, .2);
}

#navbarLogo a {
    color: #113822;
    font-family: "Montserrat",sans-serif;
    font-weight:800;
    padding-top:10px;
    padding-bottom: 10px;
    padding-left: 10px;
    letter-spacing: .1rem;
    line-height: 1.5;
    text-decoration: none;
}

.nav-item {
    padding: .5rem;
}

#navbarNav.collapse.navbar-collapse{
    color: #7e9b86;
}

.navbar-light .navbar-nav .nav-link{
    color: #7e9b86;
}

.navbar-light .navbar-nav .nav-link:hover {
    color: #113822;
}

.navbar-toggler{
    padding-right: 20px;
    border: none;
    font-size: 1rem;
}

.navbar-toggler.navbar-toggler-icon {
    background-color: #113822;
    border:0;
}

/****Jumbotron & Image****/

.callout-container {
    height: 100vh;
    width: 100%;
    background: url('../images/car-image.jpg') no-repeat center center fixed;
    background-size: cover;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: left;
    -ms-flex-pack: left;
    justify-content: left;
    position: relative;
}

.opaque-overlay {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    background-size: cover;  
}

.jumbotron {
    background-color: transparent;
    margin-bottom: 0;
}

.jumbotron h1 {
    color: #f6fbf8;
    font-family: "Raleway", sans-serif;
    font-size: 2.25rem;
    margin-bottom: .1rem;
}

.jumbotron-header em {
    color: goldenrod;
}

.jumbotron .lead {
    color: #f6fbf8;
    font-family: "Raleway",sans-serif;
    font-size: 1.4rem;
    font-weight: 800;
    margin-top: 0;
    margin-bottom: 3rem;
}

.btn-lg {
    padding: .6rem 2rem;
    line-height: 1.5;
    border-radius: .3rem;
}

.btn-warning {
    color: #2b6247;
    font-weight: 700;
    font-size: 1.25rem;
    background-color: goldenrod;
}

.btn.btn-lg:hover:{
    color: #fbd608;
}
 
/****About******/

.about-us-box {
    margin-top: 20px;
    padding: 10px 5px;
}
 
.about-us-box-text {
    padding: 10px;
    text-align: center;
}
 
.about-us-box-text h2 {
    font-family: "Montserrat",sans-serif;
     color: #113822;
    font-weight: 800;
    margin-top: 0;
    margin-bottom: 30px;
}

.about-us-box-text p {
    color: #113822;
    font-family: "Raleway",sans-serif;
    font-size:1.3rem;
    font-weight: 600;
    text-align: center;
}
  
.about-us-box-img img {
    width: 100%;
    height: auto;
    border-radius: 15px;
    padding: 0;
    float: left;
}

.about-container {
    box-shadow: 0 .5rem .5rem rgba(0, 0, 0, .2);
    -webkit-box-shadow: 0 .5rem .5rem rgba(0, 0, 0, .2);
    background: rgba(232, 242, 230, 0.849);
    /*background:-webkit-gradient (linear,left top, left bottom,from (rgba(232, 242, 230, 0.849),to (rgba(69, 143, 97, 0.6)),to));
    background:-o-linear-gradient(rgba(232, 242, 230, 0.849),rgba(69, 143, 97, 0.6));
    background: linear-gradient(rgba(232, 242, 230, 0.849),rgba(69, 143, 97, 0.6));*/
}

/****Team Section****/

.team-container {
    -ms-flex-line-pack: center;
    align-content: center;
    -webkit-box-shadow: 0 .5rem .5rem rgba(0, 0, 0, .2);
    box-shadow: 0 .5rem .5rem rgba(0, 0, 0, .2);
    position: relative;
    background: rgba(232, 242, 230, 0.753);
}

.team-heading {
    font-family: "Montserrat",sans-serif;
    color: #113822;
    font-weight: 800;
    text-align: center;
    padding-top: 15px;
    padding-bottom: 15px;
}

.team-heading i {
    font-size: 2.5rem;
    padding-left: 10px;
}

.card {
    display:-webkit-box;
    display:-ms-flexbox;
    display:flex;
    -webkit-box-flex: 1;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    padding: 5px;
    border:none;
    border-radius: 10px;
    background:-webkit-gradient(linear,left top, left bottom,from((rgba(3, 55, 23, 0.6)),to rgba(232, 242, 230, 0.849)));
    background:-o-linear-gradient(rgba(3, 55, 23, 0.6),rgba(232, 242, 230, 0.849));
    background: linear-gradient(rgba(3, 55, 23, 0.6),rgba(232, 242, 230, 0.849));  
}

.card-deck .col-sm-12 {
    padding: 0;
}
 
.team-image {
    border-radius: 10px;
}

.card-title {
    font-family: "Montserrat",sans-serif;
    color: #113822;
    font-weight: 800;
    text-align: center;
    margin-top: 10px;
    margin-bottom: 10px;
}

.card-text {
    font-family: "Raleway",sans-serif;
    color: #113822;
    font-size: 1.3rem;
    font-weight: 600;
    -ms-flex-line-pack: center;
    align-content: center;
    text-align:center;
    margin-top: 30px;
    margin-bottom: 20px;
}

.card-body {
    padding: 10px;
}

#teamImage {
    display: block;
    margin-left: 0;
    margin-right: 0;
    width: 50%;   
}
/* ... */

